# rvc-web

./: .env.example  .gitignore  AUDIO_QUALITY_ANALYSIS.md  README.md  VOICE_CLONING_RECOMMENDATIONS.md  convert_nemo_to_pt.py  install.bat  install.sh  meanvc_freevc_comparison.md  pytest.ini  requirements.txt  start.bat  start.sh  stop.bat  stop.sh  validate_speaker_encoder.py
.bg-shell/: manifest.json
.gsd/: CODEBASE.md  DECISIONS.md  KNOWLEDGE.md  PREFERENCES.md  PROJECT.md  REQUIREMENTS.md  STATE.md  event-log.jsonl  gsd.db  gsd.db-shm  gsd.db-wal  last-snapshot.md  notifications.jsonl  state-manifest.json
additional/: convert_nemo_to_pt.py  validate_speaker_encoder_strict.py
beatrice/: .gitignore  MPS-FIXES.md  README.md  convert.py  download_assets.py  preprocess.py  train.sh
beatrice/trainer/: .gitattributes  .gitignore  README.md  pyproject.toml
beatrice/trainer/assets/: README.md  default_config.json
beatrice/trainer/beatrice_trainer/: __main__.py
docs/: AMPHION-VEVO2-ANALYSIS.md  BEATRICE-ANALYSIS.md  BEATRICE2_INTEGRATION.md  CROSS_PLATFORM_ANALYSIS.md  DEITERIS-VC-ANALYSIS.md  KNOWLEDGE.md  PIPELINE_ANALYSIS.md  REALTIME_CLIENT_IO_MIGRATION.md  RT-VC-ANALYSIS.md  Reference encoder.md  TRAINING_COMPARISON.md  TRAINING_PIPELINE.md  TRAINING_PIPELINE_AUDIT.md  TRAINING_QUALITY_ANALYSIS.md  TRAINING_STRATEGY.md  VOCODER-COMPARISON.md  WAY-FORWARD.md  beatrice2-augmentation-precompute.md  beatrice2-realtime-pipeline.md  f0-prior-analysis.md  meanvc-freevc-integration-analysis.md  pitch-pipeline.md  prosody-modeling-analysis.md
frontend/: package.json  (+2 more)
(+183 files in other folders)
